change name to deepply

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChessAI</title>
+    <title>DeepPly</title>
     <link rel="stylesheet" href="/./static/styles.css">
     <script src="/./static/scripts.js" defer></script>
 </head>
 <body>
-    <h1>Welcome to ChessAI</h1>
+    <h1>Welcome to DeepPly</h1>
     <p>Your AI-powered chess companion.</p>
     <h3>Login</h3>
     <form id="loginForm">
