--- a/pages/register.html
+++ b/pages/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChessAI</title>
+    <title>DeepPly</title>
     <link rel="stylesheet" href="/./static/register.css">
     <script src="/./static/register.js" defer></script>
 </head>
